fix: register CorsFilter bean to fix CORS on all routes